--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.4.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
-    <groupId>cn.udream.spring</groupId>
-    <artifactId>eventdrive</artifactId>
+    <groupId>cn.udream</groupId>
+    <artifactId>delayqueue</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>eventdrive</name>
-    <description>Demo project for Spring Boot</description>
+    <name>delayqueue</name>
+    <description>Redis Delayqueue</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -41,11 +41,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.62</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-pool2</artifactId>
+            <version>1.2.60</version>
         </dependency>
     </dependencies>
 
